# finance-a2a-automation

./: .dockerignore  .env.example  .gitignore  AWS_DEPLOYMENT_GUIDE.md  CLEAR_TABLES_README.md  CONVERSATION_STATE_FIX_SUMMARY.md  DEPLOYMENT_OPTIONS.md  ENVIRONMENT_CONFIGURATION.md  HOST_AGENT_CONNECTION_FIX.md  MIGRATION_INSTRUCTIONS.md  PORTFOLIO_UPLOAD_TRACKING.md  README.md  README_stock_api.md  TROUBLESHOOTING.md  clear_all_tables.sql  clear_tables_lambda.py  deploy.sh  docker-compose.aws.yml  docker-compose.yml  init.sql  lambda_migration_function.py  logger.py  pyproject.toml  requirements.txt  run_all_migrations_aws.sh  run_migration_in_ecs.sh  run_migrations_task.sh  task-definition-migration.json  test_chat_endpoint.py  test_db_utils.py  test_storage.py
host_agent/: API_QUICK_REFERENCE.md  CHATS_API_GUIDE.md  CONVERSATION_SYSTEM_GUIDE.md  Dockerfile  STOCK_MANAGEMENT_GUIDE.md  TEST_README.md  TEST_RESULTS.md  __main__.py  agent.py  app.py  apply_migration.py  config.py  database.py  db_utils.py  env.example  fix_foreign_key_constraints.sql  init_database.py  migrate_portfolio_field.sql  pyproject.toml  remote_agent_connection.py  run_migration_aws.sh  start_system.sh  stock_data.json  test_chats_api.py  test_conversation_system.py  test_workflow.py  test_workflow_manual.py  user_api.py
host_agent/host/: agent.py  document_analyzer.py  pdf_analyzer.py  remote_agent_connection.py
host_agent/migrations/: 001_add_stock_recommendations_table.sql  002_add_input_format_column.sql  003_add_portfolio_analysis_table.sql  004_add_user_whitelist_table.sql  005_add_market_preference_column.sql  006_add_message_credits.sql  README.md  run_migrations.py
reportanalyser_agent/: __main__.py  (+2 more)
stockanalyser_agent/: .env.example  Dockerfile  LLM_ALLOCATION_UPGRADE.md  MCP_FUNCTION_SCHEMA_FIX.md  SECTION_EXTRACTOR_GUIDE.md  WEBHOOK_INTEGRATION.md  __main__.py  agent.py  agent_executor.py  allocation.json  check_env.py  config.py  database.py  debug_webhook.py  env.example  fetch_technical_indicators.py  integration_example.py  limited_context_session_service.py  logger.py  pyproject.toml  section_extractor.py  stock_analysis_results.txt  stock_api.py  test_extractor.py  test_mcp_agent.py  test_programmatic_flow.py  test_webhook.py
(+15 files in other folders)
