[project]
name = "finance-a2a-automation"
version = "0.1.0"
description = "Automation project using Google GenAI and Google API SDK."
authors = [
    { name = "Debojyoti Chakraborty", email = "debo.chakraborty.6@gmail.com" }
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
google-genai = "*"
google-api-python-client = "*"
a2a-sdk = "*"
google-adk = "*"
gradio = "*"
pymupdf = "^1.26.1"
yfinance = "^0.2.63"

[build-system]         
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 