[project]
name = "stock-analyser-agent"
version = "0.1.0"
description = "Stock analyser agent for the A2A project."
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.6",
    "google-adk>=1.14.1",
    "google-genai",
    "python-dotenv",
    "uvicorn",
    "requests",
    "psycopg2-binary>=2.9.11",
    "perplexityai",
    "openai>=1.0.0",
    "yfinance>=0.2.55",
    "pandas_ta>=0.3.14b0",
    "tabulate>=0.9.0",
    "numpy>=2.2.6",
] 
